# ml-api

./: Dockerfile  README.md  docker-compose.yml  main.py  models.py  pipeline.py  pyproject.toml
data/: empl_status_encoder.joblib  model.pkl  models.pkl  value_encoder.joblib
docs/: README.md
src/: main.py  pipeline.py  preprocessing.py  pyproject.toml
src/data/: education_encoder.joblib  family_status_encoder.joblib  goods_category_encoder.joblib  pos_сategory_encoder.joblib
