[tool.poetry]
name = "ml-api"
version = "0.1.0"
description = ""
authors = ["modernpacifist <modernpacifist@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
joblib = "^1.3.2"
pandas = "^2.1.4"
nltk = "^3.8.1"
pymystem3 = "^0.2.0"
scikit-learn = "1.2.2"
xgboost = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
